"# This is a comment line in the commit message."

--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
                     <ul class="footer-links">
                         <li><a href="#tools">Firebase Integration</a></li>
                         <li><a href="#tools">Java Utilities</a></li>
-                        <li><a href="#tools">XMLLLLLLLLLLLLLLLLLLL Layout Kit</a></li>
+                        <li><a href="#tools">XML Layout Kit</a></li>
                         <li><a href="#tools">Android Studio</a></li>
                     </ul>
                 </div>
