--- a/index.html
+++ b/index.html
@@ -1391,7 +1391,7 @@
     <script>
         function downloadAPK() {
             // Method 1: Direct GitHub raw link
-            const downloadUrl = 'https://github.com/Folesterio/LandingPage/raw/main/Del_Private_School.apk';
+            const downloadUrl = 'https://github.com/Folesterio/LandingPage/releases/download/v1.0.0/Del.Private.School.apk';
             
             // Create temporary link and trigger download
             const link = document.createElement('a');
