--- a/index.html
+++ b/index.html
@@ -1332,9 +1332,10 @@
                 <h2 class="section-title">Download Our App</h2>
                 <p class="section-subtitle">Get the DEL Private School app for your Android device</p>
                 
-                <a href="https://github.com/Folesterio/LandingPage/releases/download/v1.0.0/Del_Private_School.apk" 
+                <a href="https://github.com/Folesterio/LandingPage/releases/download/v1.0.0/Del.Private.School.apk" 
                 class="download-btn" 
-                download="Del_Private_School.apk">
+                download="Del_Private_School.apk"
+                onclick="trackDownload()">
                  <i class="fas fa-download"></i>
                  Download APK (v1.0.0)
              </a>
