--- a/index.html
+++ b/index.html
@@ -1011,6 +1011,7 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#cta">Get Started</a></li>
                 <li><a href="#tools">Tools & APIs</a></li>
+                <li><a href="#Download">Download</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <button class="mobile-menu-btn">
