--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
     <main>
         <section class="hero">
             <div class="hero-content container">
-                <h1>Student Information Management System</h1>
+                <h1>Student Information System</h1>
                 <div class="subtitle">Secure Grade Management Platform</div>
                 <p>
                     DEL Private School's comprehensive student information system provides role-based access to academic records. 
