--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,6 @@
                             <h3>Java Enterprise Backend</h3>
                             <p>Robust, scalable server-side architecture built with Java Spring Boot for handling complex academic operations.</p>
                             <ul class="tool-features">
-                                <li>Spring Boot microservices architecture</li>
                                 <li>RESTful API endpoints with OpenAPI documentation</li>
                                 <li>High-performance data processing</li>
                                 <li>Enterprise-grade security implementation</li>
@@ -1224,9 +1223,7 @@
                             <h3>Advanced Authentication</h3>
                             <p>Multi-layered security system with role-based access control and comprehensive user management.</p>
                             <ul class="tool-features">
-                                <li>JWT token-based authentication</li>
                                 <li>Multi-factor authentication (MFA)</li>
-                                <li>Granular role-based permissions</li>
                                 <li>Comprehensive activity logging</li>
                                 <li>OAuth2 and SSO integration</li>
                             </ul>
@@ -1246,8 +1243,8 @@
                         <div class="dev-avatar">
                             <i class="fas fa-user-tie"></i>
                         </div>
-                        <div class="dev-name">Alex Johnson</div>
-                        <div class="dev-role">Lead Full-Stack Developer</div>
+                        <div class="dev-name">Jeserel Folesterio</div>
+                        <div class="dev-role">Developer</div>
                         <div class="dev-skills">
                             <span class="skill-tag">Java Spring</span>
                             <span class="skill-tag">Firebase</span>
@@ -1260,8 +1257,8 @@
                         <div class="dev-avatar">
                             <i class="fas fa-palette"></i>
                         </div>
-                        <div class="dev-name">Sarah Williams</div>
-                        <div class="dev-role">Senior UI/UX Designer</div>
+                        <div class="dev-name">Klein Aldrich Abian</div>
+                        <div class="dev-role">UI/UX Designer</div>
                         <div class="dev-skills">
                             <span class="skill-tag">Figma</span>
                             <span class="skill-tag">CSS3</span>
@@ -1274,8 +1271,8 @@
                         <div class="dev-avatar">
                             <i class="fas fa-server"></i>
                         </div>
-                        <div class="dev-name">Michael Chen</div>
-                        <div class="dev-role">Backend Systems Engineer</div>
+                        <div class="dev-name">Crezia Jones Lomongo/div>
+                        <div class="dev-role">Backend</div>
                         <div class="dev-skills">
                             <span class="skill-tag">Node.js</span>
                             <span class="skill-tag">API Design</span>
@@ -1288,8 +1285,8 @@
                         <div class="dev-avatar">
                             <i class="fas fa-shield-alt"></i>
                         </div>
-                        <div class="dev-name">Emily Rodriguez</div>
-                        <div class="dev-role">Cybersecurity Specialist</div>
+                        <div class="dev-name">Crezia Jones Lomongo</div>
+                        <div class="dev-role">Project Manager</div>
                         <div class="dev-skills">
                             <span class="skill-tag">Penetration Testing</span>
                             <span class="skill-tag">Encryption</span>
