--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,7 @@
                         <div class="dev-avatar">
                             <i class="fas fa-server"></i>
                         </div>
-                        <div class="dev-name">Crezia Jones Lomongo/div>
+                        <div class="dev-name">Crezia Jones Lomongo</div>
                         <div class="dev-role">Backend</div>
                         <div class="dev-skills">
                             <span class="skill-tag">Node.js</span>
