--- a/index.html
+++ b/index.html
@@ -1326,6 +1326,13 @@
                 <div style="margin-top: 2rem; opacity: 0.8; font-size: 0.9rem;">
                     <p><i class="fas fa-info-circle"></i> System Requirements: Android 5.0+ | Size: ~15MB</p>
                 </div>
+                                <a href="https://github.com/Folesterio/LandingPage/releases/download/v1.0.0/Student.Information.System.for.Private.High.Schools.pdf" 
+                   class="download-btn" 
+                   download="Del_Private_School_PDF.apk"
+                   onclick="trackDownload()">
+                    <i class="fas fa-download"></i>
+                    Download PDF DOCUMENTATIION (v1.0.0)
+                </a>
             </div>
         </section>
     </main>
