"# This is a comment line in the commit message."

--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
                    download="Del_Private_School_PDF.apk"
                    onclick="trackDownload()">
                     <i class="fas fa-download"></i>
-                    Download PDF DOCUMENTATIION (v1.0.0)
+                    Download PDF DOCUMENTATION (v1.0.0)
                 </a>
             </div>
         </section>
